--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,11 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "MyProgram"
+mainClassName = "TRY.sandbox.TryProgram"
+
+repositories {
+    mavenCentral{}
+}
+
+dependencies {
+    implementation 'org.testng:testng:6.14.3'
+}
